k8s/kustomize/application/deployment-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: notejam-flask-rollout
  namespace: notejam-flask-rollout
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notejam-flask-rollout
  template:
    metadata:
      labels:
        app: notejam-flask-rollout
    spec:
      containers:
      - name: notejam-flask-rollout
        image: maverick0803/spinint3notejamdev:3.0
        imagePullPolicy: Always
        ports:
         - containerPort: 5000
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause:
          duration: "30s"
      - setWeight: 50
      - pause:
          duration: "30s"

---
apiVersion: v1
kind: Service
metadata:
  name: notejam-flask-rollout-svc
spec:
  selector:
    app: notejam-flask-rollout
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
