k8s/kustomize/application/notejam-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notejam-flask
  namespace: notejam-flask
  labels:
    app: notejam-flask
spec:
  type: NodePort
  selector:
    app: notejam-flask
  ports:
    - port: 5000
      targetPort: 5000
